v0.94
* many code improvements from @lokka30
* spawners are checked if they exist before spawning in entities
* added new command /sc scan_near